# ProjectRomero

./: .gitignore  README  README.md
Android_Remote/: Readme.txt  app-debug.apk
Android_Remote/CarRemote/app/: build.gradle
Android_Remote/CarRemote/gradle/wrapper/: gradle-wrapper.properties
Android_Remote/Remote/app/: build.gradle
Android_Remote/Remote/gradle/wrapper/: gradle-wrapper.properties
Android_Remote/RemoteIHM/app/: build.gradle
Android_Remote/connect/app/: build.gradle
RaspberryPi/: can.c  can.h  canRaspi.c  canRaspi.h  timeTest.c
RaspberryPi/Camera/: video_test.cpp
RaspberryPi/acm-rpi-app/: CMakeLists.txt  README.md
RaspberryPi/acm-rpi-app/src/: AcmApplication.cpp  AcmApplication.hpp  Camera.hpp  CarParam.hpp  Csv.hpp  Logger.hpp  main.cpp
RaspberryPi/bluetooth-samples/: btclient.c  btserver.c
RaspberryPi/gateway/: CMakeLists.txt  README.md
RaspberryPi/gateway/src/: CarParam.cpp  CarParam.hpp  CarParamIn.hpp  CarParamOut.hpp  Gateway.cpp  Gateway.hpp  GattServer.hpp  ObstacleDetector.hpp  Signalfd.hpp  Timerfd.hpp  acm.c  acm.h  btgatt-server-upstream.c  btgatt-server.c  can.c  can.h  gatt-server-test.c  main.cpp  my-btgatt-server.c  test-acm-toolchain2.cpp
RaspberryPi/yocto/: README.md
STM32/Project_Car-master/: README.md
STM32/Project_Car-master/MDK-ARM/: voiture_test.uvguix.egreteau  voiture_test.uvoptx  voiture_test.uvprojx
STM32/Project_Car-master/app/: constants.h  main.c  manager.c
STM32/STM32_library/: API_CAN.c  CAN.c  CAN.h  CanDemo.c  IT.c  Timer_1234.c  blablabla.txt
Test-arduino/: Test-arduino.ino
(+172 files in other folders)
